--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,24 +1,27 @@
 name: Build
 on:
   push:
-  pull_request:
-  workflow_dispatch:
+    tags:
+      - "fabric-v**"
 
 permissions:
   contents: write
+  packages: write
 
 jobs:
-  deps:
+  release-info:
+    outputs:
+      tag: ${{ github.ref_name }}
+      name: ${{ github.ref_name }}
+      prerelease: ${{ steps.regex-tag.outputs.match == '' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup JDK 21
-        uses: actions/setup-java@v4
+      - uses: KyoriPowered/action-regex-match@v4
+        id: regex-tag
         with:
-          java-version: 21
-          distribution: temurin
-      - name: Generate and submit dependency graph
-        uses: gradle/actions/dependency-submission@v3
+          text: ${{ github.ref }}
+          regex: '^refs\/tags\/fabric-v\d+\.\d+\.\d+$'
 
   lint:
     runs-on: ubuntu-latest
@@ -36,7 +39,7 @@ jobs:
       - name: Spotless check
         run: ./gradlew spotlessCheck --info
 
-  build:
+  build-test:
     strategy:
       matrix:
         java: [
@@ -64,3 +67,36 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+
+  build-release:
+    runs-on: ubuntu-latest
+    needs: [release-info, lint, build-test]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Validate gradle wrapper
+        uses: gradle/wrapper-validation-action@v2
+      - name: Setup JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21   # Latest Java
+          distribution: temurin
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Clean
+        run: ./gradlew clean --info
+      - name: Build
+        run: ./gradlew build --info
+      - name: Publish package
+        if: ${{ ! contains(github.ref, '-dev') }}
+        run: ./gradlew publish --info
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create and push artifacts to release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ needs.release-info.outputs.tag }}
+          name: ${{ needs.release-info.outputs.name }}
+          allowUpdates: true
+          prerelease: ${{ needs.release.outputs.prerelease }}
+          artifacts: "build/libs/*"
+          body: ""
