--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 plugins {
-	id 'fabric-loom' version '1.5-SNAPSHOT'
-	id 'maven-publish'
+	id "fabric-loom" version "1.5-SNAPSHOT"
+
+	id "maven-publish"
+	id "com.modrinth.minotaur" version "2.+"
 
 	id "com.diffplug.spotless" version "6.25.0"
 	id "com.github.spotbugs" version "6.0.8"
 }
 
-version = project.mod_version
+version = "fabric" + project.mod_version + "+" + project.minecraft_version
 group = project.maven_group
 
 base {
@@ -19,6 +21,10 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven {
+		name = "ParchmentMC"
+		url = "https://maven.parchmentmc.org"
+	}
 }
 
 loom {
@@ -39,16 +45,19 @@ fabricApi {
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+
+	//	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	//	mappings loom.officialMojangMappings()
+	mappings loom.layered() {
+		officialMojangMappings()
+		parchment "org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_mappings}@zip"
+	}
+
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	// TODO: Use subset of fabric api. (https://github.com/FabricMC/fabric-example-mod/issues/175)
-
-	// Uncomment the following line to enable the deprecated Fabric API modules.
-	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
-	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
 	compileOnly "org.jetbrains:annotations:24.1.0"
 
@@ -69,10 +78,11 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
 }
 
+build {
+	dependsOn spotlessApply
+}
+
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
 	sourceCompatibility = JavaVersion.VERSION_17
@@ -92,13 +102,15 @@ publishing {
 			from components.java
 		}
 	}
-
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+		maven {
+			name = "GitHubPackages"
+			url = "https://maven.pkg.github.com/harmless-tech/mc-what-is-that"
+			credentials {
+				username = System.getenv("GITHUB_ACTOR")
+				password = System.getenv("GITHUB_TOKEN")
+			}
+		}
 	}
 }
 
