--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Fabric Properties
@@ -8,8 +8,11 @@ minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
 loader_version=0.15.7
 
+# https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data
+parchment_mappings=2024.02.25
+
 # Mod Properties
-mod_version=0.0.1-alpha
+mod_version=0.0.1-dev.0
 maven_group=tech.harmless.mc.whatwasthat
 archives_base_name=what-was-that
 
