--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,22 +23,6 @@ jobs:
           text: ${{ github.ref }}
           regex: '^refs\/tags\/fabric-v\d+\.\d+\.\d+$'
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v2
-      - name: Setup JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: 21   # Latest Java
-          distribution: temurin
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-      - name: Spotless check
-        run: ./gradlew spotlessCheck --info
-
   build-test:
     strategy:
       matrix:
@@ -70,7 +54,7 @@ jobs:
 
   build-release:
     runs-on: ubuntu-latest
-    needs: [release-info, lint, build-test]
+    needs: [release-info, build-test]
     steps:
       - uses: actions/checkout@v4
       - name: Validate gradle wrapper
@@ -87,10 +71,12 @@ jobs:
       - name: Build
         run: ./gradlew build --info
       - name: Publish package
-        if: ${{ ! contains(github.ref, '-dev') }}
         run: ./gradlew publish --info
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish Modrinth
+        if: ${{ ! contains(github.ref, '-dev') }}
+        run: echo "NULL"    # TODO: https://github.com/modrinth/minotaur
       - name: Create and push artifacts to release
         uses: ncipollo/release-action@v1
         with:
