--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ plugins {
 	id "com.github.spotbugs" version "6.0.8"
 }
 
-version = "fabric" + project.mod_version + "+" + project.minecraft_version
+version = project.mod_version + "+" + project.minecraft_version
 group = project.maven_group
 
 base {
-	archivesName = project.archives_base_name
+	archivesName = project.archives_base_name + "-fabric"
 }
 
 repositories {
