--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,13 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
 	maven {
 		name = "ParchmentMC"
 		url = "https://maven.parchmentmc.org"
+	}
+	maven {
+		name = "Modrinth"
+		url = "https://api.modrinth.com/maven"
 	}
 }
 
@@ -46,18 +45,17 @@ dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 
-	//	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	//	mappings loom.officialMojangMappings()
 	mappings loom.layered() {
 		officialMojangMappings()
 		parchment "org.parchmentmc.data:parchment-${project.minecraft_version}:${project.parchment_mappings}@zip"
 	}
 
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	// TODO: Use subset of fabric api. (https://github.com/FabricMC/fabric-example-mod/issues/175)
+
+	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
+	include "maven.modrinth:midnightlib:${project.midnightlib_version}"
 
 	compileOnly "org.jetbrains:annotations:24.1.0"
 
