--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,17 @@ base {
 
 repositories {
 	maven {
-		name = "ParchmentMC"
-		url = "https://maven.parchmentmc.org"
+		name "ParchmentMC"
+		url "https://maven.parchmentmc.org"
 	}
 	maven {
-		name = "Modrinth"
-		url = "https://api.modrinth.com/maven"
+		name "Modrinth"
+		url "https://api.modrinth.com/maven"
 	}
+	//	maven {
+	//		name "JitPack"
+	//		url "https://jitpack.io"
+	//	}
 }
 
 loom {
@@ -55,14 +59,19 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	// TODO: Use subset of fabric api. (https://github.com/FabricMC/fabric-example-mod/issues/175)
 
-	modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
-	include "maven.modrinth:midnightlib:${project.midnightlib_version}"
+	include modImplementation("maven.modrinth:midnightlib:${project.midnightlib_version}")
 
 	compileOnly "org.jetbrains:annotations:24.1.0"
 
 	spotbugs "com.github.spotbugs:spotbugs:${spotbugs.toolVersion.get()}"
 	spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0"
 	spotbugsPlugins "com.mebigfatguy.sb-contrib:sb-contrib:7.6.4"
+
+	// Test mods
+	modLocalRuntime "maven.modrinth:sodium:mc1.20.4-0.5.8"
+	modLocalRuntime "maven.modrinth:lithium:mc1.20.4-0.12.1"
+	modLocalRuntime "maven.modrinth:lazydfu:0.1.3"
+	modLocalRuntime "maven.modrinth:modmenu:9.0.0"
 }
 
 processResources {
