Track when a player has entered the nether or end

--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,7 @@ spotless {
 		removeUnusedImports()
 		importOrder()
 		palantirJavaFormat()
-		formatAnnotations()
+		formatAnnotations().addTypeAnnotation("Comment").addTypeAnnotation("Entry")
 	}
 	groovy {
 		target "*.gradle"
