--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup JDK 21
+      - name: Setup JDK 22
         uses: actions/setup-java@v4
         with:
-          java-version: 21
+          java-version: 22   # Latest Java
           distribution: temurin
       - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@v3
@@ -31,7 +31,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: 21   # Latest Java
+          java-version: 22   # Latest Java
           distribution: temurin
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
@@ -44,6 +44,7 @@ jobs:
         java: [
           17,    # Java LTS & minimum supported by Minecraft
           21,    # Current Java LTS
+          22,    # Current Java
         ]
         os: [ubuntu-latest, windows-latest, macos-12, macos-14]
     runs-on: ${{ matrix.os }}
@@ -61,7 +62,7 @@ jobs:
       - name: Build
         run: ./gradlew build --info
       - name: Artifacts
-        if: ${{ runner.os == 'Linux' && matrix.java == '21' }} # Only upload artifacts built from latest java on one OS
+        if: ${{ runner.os == 'Linux' && matrix.java == '22' }} # Only upload artifacts built from the latest java on one OS
         uses: actions/upload-artifact@v4
         with:
           name: Artifacts
