--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,7 @@ jobs:
         java: [
           17,    # Java LTS & minimum supported by Minecraft
           21,    # Current Java LTS
+          22,    # Current Java
         ]
         os: [ubuntu-latest, macos-14]
     runs-on: ${{ matrix.os }}
@@ -59,10 +60,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Validate gradle wrapper
         uses: gradle/wrapper-validation-action@v2
-      - name: Setup JDK 21
+      - name: Setup JDK 22
         uses: actions/setup-java@v4
         with:
-          java-version: 21   # Latest Java
+          java-version: 22   # Latest Java
           distribution: temurin
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
