--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 	modLocalRuntime "maven.modrinth:lithium:mc1.20.4-0.12.1"
 	modLocalRuntime "maven.modrinth:lazydfu:0.1.3"
 	modLocalRuntime "maven.modrinth:modmenu:9.0.0"
+	//	modLocalRuntime "maven.modrinth:spark:1.10.58-fabric"
 }
 
 processResources {
